--- a/src/app/todos/todo-item/todo-item.component.html
+++ b/src/app/todos/todo-item/todo-item.component.html
@@ -6,8 +6,7 @@
             [formControl]="chkCompletado">
     <label (dblclick)="editar()" > {{ todo.texto }}</label>
     <button class="destroy"
-            ></button>
-            <!-- (click)="borrar()"></button> -->
+            (click)="borrar()"></button>
   </div>
   <input class="edit"
           type="text"
