--- a/src/app/todos/todo-page/todo-page.component.html
+++ b/src/app/todos/todo-page/todo-page.component.html
@@ -7,7 +7,8 @@
 
     <input id="toggle-all"
             class="toggle-all"
-            type="checkbox">
+            type="checkbox"
+            (click)="toggleAll()">
     <label for="toggle-all">Mark all as complete</label>
 
     <app-todo-list></app-todo-list>
